Fix wrap words; show time.

--- a/src/components/ArticlesTable/ArticlesTable.less
+++ b/src/components/ArticlesTable/ArticlesTable.less
@@ -1,8 +1,3 @@
-.wrapWordColumn {
-  white-space: normal;
-  word-wrap: break-word;
-}
-
 .linkDiv {
   a {
     transition: color 0.4s;
